<resources>
    <string name="app_name">Ultimate Weather</string>
    <string name="API_KEY">39c92152a462fbd708fcc7c6895bfdc3</string>

    <string name="menu_Settings">Settings</string>
    <string name="menu_Fav">Favorite city</string>
    <string name="hum">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="clouds">Clouds:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="wind_way">Wind Way:</string>
    <string name="type_placeholder">Type city name</string>
    <string name="type_units">Units Imperial/Metric</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="connection">No network connection</string>

    <string-array name="languages_array">
        <item>Arabic</item>
        <item>Bulgarian</item>
        <item>Czech</item>
        <item>German</item>
        <item>Slovak</item>
        <item>Spanish</item>
    </string-array>
</resources>
